@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Made CPSOOo installation in cpsinstall.py not hide the import error by
+  displaying the exact import error message. This partly fixes #1037.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Generate a more readable output for xml files comparison in tests
